fixed tables align

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -994,6 +994,11 @@ button{
     margin-top: 1em;
     border-collapse: collapse;
     border-spacing: 1em 0;
+    tr{
+        display: grid;
+        gap: .5em;
+        grid-template-columns: 6fr 2fr 2fr 3fr;
+    }
     .table-head{
         th{
             font-weight: 700;
@@ -1004,6 +1009,10 @@ button{
     }
     th, td{
         padding-bottom: .5em;
+        &:last-child{
+            // background-color: red;
+            // margin-left: auto;
+        }
     }
     .tag-stat .tag{
         font-size: 18px;
@@ -1029,6 +1038,7 @@ button{
     .actions{
         display: flex;
         .action-btn{
+            line-height: auto;
             padding: 5px 10px;
             background: #F2F6F9;
             font-weight: 700;
@@ -1038,6 +1048,7 @@ button{
             text-transform: uppercase;
             display: inline-block;
             cursor: pointer;
+            height: fit-content;
             &:first-child{
                 margin-right: .5em;
             }
@@ -1158,6 +1169,18 @@ button{
         transform: translate(-100%, 0);
     }
     .nfc-tags-management-table{
+        tr{
+            grid-template-columns: 6fr 2fr 3fr;
+            td{
+                text-align: left;
+            }
+            th:last-child{
+                text-align: right;
+            }
+        }
+        .actions{
+            margin-left: auto;
+        }
         th:nth-child(2), td:nth-child(2){
             display: none;
         }
@@ -1215,6 +1238,9 @@ button{
         display: block;
     }
     .nfc-tags-management-table{
+        tr{
+            grid-template-columns: 5fr 2fr 2fr;
+        }
         .tag-stat .tag{
             font-size: 14px;
         }
